Fix website on mobile

--- a/static/main.css
+++ b/static/main.css
@@ -44,6 +44,10 @@ h4 {
   font-size: 24px;
   line-height: 1.5em;
 }
+p code {
+  padding-left: 0;
+  padding-right: 0;
+}
 .deep-link a,
 .deep-link a:visited {
   text-decoration: none;
@@ -55,6 +59,7 @@ nav {
 }
 nav > ul {
   padding-top: 1em;
+  padding-left: 0;
 }
 nav > ul > li {
   display: inline;
@@ -509,4 +514,23 @@ dl dd {
   font-weight: 600;
   font-size: 9px;
   line-height: 1;
+}
+
+@media only screen and (max-width: 600px) {
+  table {
+    width: 100%;
+  }
+
+  td, th {
+    display: inline-block;
+    width: 49%;
+  }
+
+  td img, th img {
+    width: calc(100% - 30px);
+  }
+
+  h1, h2, h3, h4, h5, h6 {
+    overflow-wrap: break-word
+  }
 }
